tests/transpiler/x/zig/two-sum.zig
// Generated by Mochi Zig transpiler on 2025-07-20 08:14 +0000
const std = @import("std");

fn twoSum(nums: []i64, target: i64) []i64 {
    const n = std.mem.len(nums);
    for (0..n) |i| {
        for (i + 1..n) |j| {
            if (nums[i] + nums[j] == target) {
                return [_]i64{i, j};
            }
        }
    }
    return [_]i64{0 - 1, 0 - 1};
}

pub fn main() void {
    const result = twoSum([_]i64{2, 7, 11, 15}, 9);
    std.debug.print("{c}\n", .{result[0]});
    std.debug.print("{c}\n", .{result[1]});
}
